app/style/Modals.less
@import (reference) "./main.less";
@import (reference) "./Icons.less";

.app-modal-overlay,
.app-modal-overlay-reduced-bar,
.app-modal-overlay-standalone {
  position: fixed;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 100;
  background-color: rgba(0, 0, 0, 0.05);
}

.app-modal-overlay {
  left: 296px;
}

.app-modal-overlay-reduced-bar {
  left: 60px;
}

.app-modal-overlay-standalone {
  left: 0;
}

.app-modal,
.app-modal-reduced-bar,
.app-modal-standalone {
  position: fixed;
  color: var(--title-text-and-button-background);
  background-color: var(--background-back-color);
  box-shadow: 0 15px 34px rgba(9, 20, 64, 0.21);
  z-index: 200;
  top: 0;
  right: 0;
}

.app-modal {
  left: 296px;
}

.app-modal-reduced-bar {
  margin: auto;
  left: 0;
  width: 540px !important;
  margin-top: 172px !important;
}

.app-modal-standalone {
  left: 0;
}

.app-modal.info-modal,
.app-modal.confirm-modal,
.app-modal-reduced-bar.confirm-modal,
.app-modal-reduced-bar.info-modal,
.app-modal-standalone.info-modal,
.pseudo-modal.info-modal {
  max-height: 60%;
  z-index: 200;
  overflow-y: auto;
  text-align: left;
  width: 262px;
  margin-top: 156px;
  background-image: var(--tickets-info-icon);
  background-size: 32px 32px;
  background-repeat: no-repeat;
  background-position: 18px 32px;
  padding: 30px 40px 20px 58px;
  font-size: 13px;
  line-height: 17px;
}

.pseudo-modal.info-modal {
  z-index: 98;
  margin-top: 0;
  margin-left: 150px;
  padding: 30px 40px 30px 58px;
}

.app-modal.info-modal {
  margin-left: 272px;
}

.app-modal-reduced-bar.info-modal {
  margin-left: 390px;
}

.app-modal-standalone.info-modal {
  margin-left: 420px;
}

.app-modal.info-modal.double,
.app-modal-reduced-bar.info-modal.double,
.app-modal-standalone.info-modal.double,
.app-modal.passphrase-modal,
.app-modal.confirm-modal,
.app-modal-reduced-bar.passphrase-modal {
  width: 540px;
  margin-top: 172px;
}

.app-modal.about-modal,
.app-modal-reduced-bar.about-modal,
.app-modal-standalone.about-modal {
  max-height: 60%;
  z-index: 200;
  overflow-y: auto;
  text-align: left;
  width: 611px !important;
  height: 342px;
  margin-top: 108px;
  font-size: 13px;
  line-height: 17px;
  color:var(--modal-text);
  a {
    cursor: pointer;
    text-decoration: underline;
    color:var(--modal-text);
  }

  a:hover,
  a:active {
    color: var(--input-color);
  }
}

.about-modal-icon {
  float: left;
  height: 231px;
  width: 231px;
  box-shadow: 0px 13px 21px rgba(9, 20, 64, 0.34);
  margin-left: 20px;
  margin-top: 30px;
  margin-bottom: 30px;
  background-position: 50%;
  background-image: @decred-macos-1024-logo;
  background-size: 231px;
  background-repeat: no-repeat;
  border-radius: 40px;
}

.about-modal-content {
  float: left;
  width: 260px;
  margin-left: 50px;
  margin-top: 30px;
}

.about-modal-title {
  font-size: 27px;
  line-height: 34px;
  margin-bottom: 20px;
}

.about-modal-text {
  font-size: 13px;
  line-height: 17px;
}

.about-modal-bottom-area {
  float: left;
  width: 571px;
  margin-left: 20px;
  border-top: 1px solid var(--modal-stroke-color);
  padding-top: 10px;
  display: flex;
  justify-content: space-between;
  color: var(--modal-bottom);

  .about-modal-bottom-area-middle a,
  .about-modal-bottom-area-right a {
    color: var(--modal-bottom) !important;
  }

  a.about-modal-upgrade {
    color: var(--input-color);
    cursor: pointer;
    text-decoration: none;
  }

  a.about-modal-upgrade:hover {
    color: var(--input-color-hover);
  }


}

.about-modal-text-paragraph {
  margin-bottom: 10px;
}

.app-modal.about-modal {
  margin-left: 95px;
}

.app-modal-reduced-bar.about-modal {
  margin-left: 200px;
}

.app-modal-standalone.about-modal {
  margin-left: 280px;
}

.app-modal.info-modal.double,
.app-modal.confirm-modal,
.app-modal.passphrase-modal {
  margin-left: 134px;
}

.app-modal-reduced-bar.info-modal.double,
.app-modal-reduced-bar.passphrase-modal {
  margin-left: 252px;
}

.app-modal-standalone.info-modal.double {
  margin-left: 282px;
}

.info-modal-close-button {
  font-size: 13px;
  line-height: 17px;
  padding: 6px 20px;
  text-transform: none;
}

.info-modal-close-button-top {
  position: absolute;
  top: 20px;
  right: 20px;
  height: 10px;
  width: 10px;
  background-image: var(--x-grey);
  background-size: 10px 10px;
  background-repeat: no-repeat;
  cursor: pointer;
}

.info-modal-close-button-top:hover {
  opacity: 0.7;
}

.app-modal.passphrase-modal,
.app-modal-reduced-bar.passphrase-modal {
  z-index: 200;
  overflow-y: auto;
  padding: 2em;
  line-height: normal;
  text-align: left;
  color: var(--title-text-and-button-background);
  box-shadow: 0 15px 34px 0 rgba(12, 30, 62, 0.34);
}

.double .info-modal-documentation:not(.constitution) {
  column-count: 2;
  margin-bottom: 20px;
}

.info-modal-content h1 {
  font-size: 27px;
  line-height: 34px;
  font-weight: 400;
  margin-top: 0;
  margin-bottom: 8px;
  column-span: all;
}

.info-modal-content p {
  margin: 0 0 2em 0;
  break-inside: avoid-page;
  color:var(--modal-text);
}

.info-modal-content li {
  margin-left: -28px;
}

@media screen and (max-height: 420px) {
  .app-modal.passphrase-modal,
  .app-modal.confirm-modal,
  .app-modal.reduced-bar.passphrase-modal {
    top: 10%;
    max-height: 60%;
  }
}

.passphrase-modal-toolbar > .passphrase-modal-close-button {
  margin-right: 10px;
  float: left;
}

.passphrase-modal-header {
  float: left;
  background-image: var(--password);
  background-size: 40px 40px;
  background-repeat: no-repeat;
  margin-bottom: 10px;
}

.passphrase-modal-header-title {
  margin-left: 50px;
  font-size: 27px;
  text-transform: capitalize;
  padding-top: 5px;
  display: flex;
}

.passphrase-modal-content {
  float: left;
  width: 100%;
}

.passphrase-modal-header-description {
  margin-top: 10px;
  margin-left: 50px;
  font-size: 15px;
  float: left;

  .orange-warning {
    position: inherit;
  }
}

.passphrase-modal-confirm-send {
  width: 415px;
}

.passphrase-modal-confirm-send-label {
  float: left;
  width: 65%;
  margin-top: 5px;
}

.passphrase-modal-confirm-send-address {
  margin-left: 20px;
  margin-top: 5px;
  font-weight: 600;
  float: right;
}

.passphrase-modal-confirm-send-balance {
  margin-left: 20px;
  font-weight: 600;
  margin-top: 5px;
  float: right;
}

.passphrase-modal-field {
  display: flex;
  height: 36px;
  margin-bottom: 5px;
}

.passphrase-modal-field-label {
  font-size: 13px;
  text-align: right;
  width: 12em;
  margin-right: 0.5em;
  padding-top: 4px;
}

.passphrase-modal-field-value {
  width: 300px;
}

.passphrase-modal-toolbar {
  margin-top: 20px;
  height: 44px;
  float: right;
}

.info-modal.info-modal-fields .info-modal-documentation {
  strong {
    color: var(--cyan-bold);
  }
}

.info-modal.has-warning .info-modal-documentation {
  strong {
    color: var(--error-text-color);
  }
}

.app-modal-standalone.confirm-seed-copy-modal {
  left: 10%;
  right: 10%;
  top: 20%;
  box-shadow: 0 15px 34px 0 rgba(12, 30, 62, 0.34);
  border-radius: 5px;
  overflow-y: auto;
  padding: 2em;
  color: var(--input-color-default);
  line-height: normal;
  text-align: left;
}

@media screen and (min-width: 768px) {
  .app-modal-standalone.confirm-seed-copy-modal {
    left: 20%;
    right: 20%;
  }
}

@media screen and (max-height: 420px) {
  .app-modal-standalone.confirm-seed-copy-modal {
    top: 10%;
    max-height: 60%;
  }
}

.confirm-seed-copy-modal-toolbar {
  float: right;
  margin-top: 2em;
}

.title-warning-copy-modal {
  font-size: 27px;
  margin-bottom: 10px;
  background-image: @info-warning;
  background-repeat: no-repeat;
  background-size: 30px;
  padding-left: 42px;
  margin-left: -10px;
  background-position: 0 center;
}

.confirm-seed-copy-modal-toolbar > .confirm-modal-confirm-button {
  float: right;
}

.confirm-seed-copy-modal-toolbar > .confirm-modal-close-button {
  float: right;
}

.confirm-seed-copy-modal-header {
  margin-bottom: 1em;
}

.confirm-seed-copy-modal-header-title {
  font-weight: 400;
  font-size: 27px;
  text-transform: capitalize;
}

.app-modal-standalone.info-confirm-modal {
  left: 446px;
  width: 350px;
  top: 243px;
  height: 330px;
  box-shadow: 0 15px 34px 0 rgba(12, 30, 62, 0.34);
  border-radius: 5px;
  overflow-y: auto;
  padding: 29px 20px 29px 20px;
  color: var(--input-color-default);
  line-height: normal;
  text-align: left;
}

.app-modal-standalone.confirm-modal {
  width: 289px;
  height: 239px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);  
  box-shadow: 0 15px 34px 0 rgba(12, 30, 62, 0.34);
  border-radius: 5px;
  overflow-y: auto;
  padding: 2em;
  color: var(--input-color-default);
  line-height: normal;
  text-align: left;
}

@media screen and (max-width: 825px) {
  .app-modal-reduced-bar.about-modal {
    margin-left:100px;
  }
}
@media screen and (max-width: 588px) {
  .app-modal-reduced-bar.about-modal {
    position: fixed;
    left: 50%;
    transform: translate(-50%, 0%);    
    margin-left:0 !important;    
    margin-right:0 !important;     
    width: 455px !important;
    height: 280px;
    .about-modal-content {
      margin-left:25px;
      padding-bottom: 20px;
      margin-top: 20px;
    }    
    .about-modal-icon {
      margin-top: 20px;
      height: 66px;
      width: 66px;
      background-size: 59px;      
    }
    .about-modal-bottom-area {
      width: 413px;
    }
  }  
}

@media screen and (max-width: 955px) {
  .app-modal-standalone.about-modal {
    margin-left: 0px;
  }

  .app-modal.about-modal,
  .app-modal-reduced-bar.about-modal,
  .app-modal-standalone.about-modal {
    width: inherit;
  }
}

.confirm-modal-toolbar {
  margin-top: 2em;
  bottom: 20px;
  right: 20px;
}

.confirm-modal-toolbar > .confirm-modal-confirm-button {
  float: right;
}

.confirm-modal-toolbar > .confirm-modal-close-button {
  float: right;
}

.confirm-modal-header {
  margin-bottom: 1em;
}

.confirm-modal-header-title {
  font-weight: 400;
  font-size: 27px;
  text-transform: capitalize;
}

.confirm-modal-header-title .mono {
  text-transform: lowercase;
}

.confirm-seed-copy-warning-text {
  white-space: pre-line;
  margin-bottom: 20px;
  margin-left: 32px;
  column-count: 2;

  p {
    margin-top: 0;
  }

  strong {
    text-decoration: underline;
  }

  em {
    color: var(--error-text-color);
  }
  
  a {
    color:var(--link-color);
  }  
}

.confirm-seed-copy-phrase {
  text-decoration: underline;
  margin: 0px 4px 0px 4px;
}

.watch-only-modal-title {
  font-size: 27px;
  color: var(--title-text-and-button-background);
  line-height: 1;
  width: 215px;
  height: 102px;
}

.watch-only-modal-content {
  color: var(--title-text-and-button-background);
  font-size: 13px;
}

.pseudo-modal {
  position: fixed;
  color: var(--title-text-and-button-background);
  background-color: var(--background-back-color);
  box-shadow: 0 15px 34px rgba(9, 20, 64, 0.21);
  z-index: 98;
}

.pseudo-modal-overlay {
  position: fixed;
  z-index: 99;
  height: 100%;
  width: 100%;
}

.info-modal-content
{
  a {
    color: var(--input-color);
    cursor: pointer;
    text-decoration: none;
  }
}

.app-modal-reduced-bar.info-modal.double {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);    
  margin:0 !important;
}

@media screen and (max-width: 768px) {
  .confirm-seed-copy-warning-text {
    column-count: 1;
  }
  .app-modal-overlay-reduced-bar {
    left:0;
  }

  .app-modal-reduced-bar.info-modal.double {
    width: 300px !important;
  }
}

@media screen and (max-width: 420px) {
  .app-modal-reduced-bar.info-modal.double  {
    width: 250px !important;
  }
}

